--- a/Pipfile
+++ b/Pipfile
@@ -4,20 +4,32 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-cryptography = "*"
-django-widget-tweaks = "*"
+asgiref = "==3.5.0"
+certifi = "==2021.10.8"
+cffi = "==1.15.0"
+charset-normalizer = "==2.0.11"
+cryptography = "==36.0.1"
+defusedxml = "==0.7.1"
+django-allauth = "==0.48.0"
+django-crispy-forms = "==1.14.0"
+django-widget-tweaks = "==1.4.12"
+idna = "==3.3"
+oauthlib = "==3.2.0"
+pycparser = "==2.21"
+python3-openid = "==3.2.0"
+requests = "==2.27.1"
+requests-oauthlib = "==1.3.1"
+sqlparse = "==0.4.2"
+tzdata = "==2021.5"
+urllib3 = "==1.26.8"
+Django = "==4.0.2"
+Pillow = "==9.0.1"
+PyJWT = "==2.3.0"
 django-environ = "*"
-django-allauth = "*"
-django-storages = "*"
 psycopg2 = "*"
 waitress = "*"
 whitenoise = "*"
-django-extensions = "*"
-pytest = "*"
-factory-boy = "*"
-Django = "*"
 PyYAML = "*"
-Pillow = "*"
 
 [dev-packages]
 
