--- a/Pipfile
+++ b/Pipfile
@@ -17,18 +17,19 @@ idna = "==3.3"
 oauthlib = "==3.2.0"
 pycparser = "==2.21"
 python3-openid = "==3.2.0"
+python-dotenv = "==0.19.2"
 requests = "==2.27.1"
 requests-oauthlib = "==1.3.1"
 sqlparse = "==0.4.2"
 tzdata = "==2021.5"
 urllib3 = "==1.26.8"
-Django = "==4.0.2"
-Pillow = "==9.0.1"
-PyJWT = "==2.3.0"
 django-environ = "*"
 psycopg2 = "*"
 waitress = "*"
 whitenoise = "*"
+Django = "==4.0.2"
+Pillow = "==9.0.1"
+PyJWT = "==2.3.0"
 PyYAML = "*"
 
 [dev-packages]
